--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,28 @@
     <artifactId>calculator-server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
 
+    </dependencies>
+
+    <properties>
+        <!-- use UTF-8 for everything -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>1.8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
